frontend/tests/cases/negative/notInScopeInterfaceAsConstraintToFun.gr
-- interface used as constraint is not in scope
simple : forall (a : Type) . {Simple a} => a -> a
simple x = x
